# degenbox-signer

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
trading/contract-fixtures/hl/: README.md  instruction_cancel.json  instruction_cancel_by_oid.json  instruction_close_position.json  instruction_order_market.json  instruction_order_reduce_only.json  instruction_order_tpsl_leverage.json  instruction_place_tpsl.json  instruction_update_leverage.json  instruction_usd_class_transfer.json  instruction_vault_transfer.json  result_cancelled.json  result_failed.json  result_filled.json  result_filled_unprotected.json  result_paper.json  result_submitted.json
trading/hl-signer-desktop/: Cargo.toml  INSTALL.md
trading/hl-signer-desktop/src/: audit.rs  auth.rs  branding.rs  clients.rs  config.rs  daemon.rs  hl_info.rs  keystore.rs  main.rs  panic.rs  self_update.rs  server.rs  signing.rs
trading/hl-signer-desktop/src/sol/: commands.rs  config.rs  mod.rs  runtime.rs  tui.rs
trading/hl-signer-desktop/src/tui/: app.rs  events.rs  log_capture.rs  logo.rs  mod.rs  setup_wizard.rs  theme.rs  widgets.rs
trading/hl-signer-desktop/src/tui/screens/: clients.rs  logs.rs  mod.rs  settings.rs  solana.rs  status.rs  wallet.rs
trading/signer-app/: Cargo.toml  INSTALL.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
trading/signer-app/docs/: ui-idiom.md
trading/signer-app/src/: App.tsx  ipc.ts  main.tsx
trading/signer-app/src-tauri/: Cargo.toml  tauri.conf.json
trading/signer-app/src-tauri/capabilities/: default.json
trading/signer-app/src-tauri/icons/: icon.icns
trading/signer-app/src-tauri/src/: auth.rs  clients.rs  commands.rs  lib.rs  local_daemon.rs  main.rs  state.rs  trade_actions.rs  tray.rs
trading/signer-app/src-tauri/src/hl/: daemon.rs  mod.rs
trading/signer-app/src-tauri/src/sol/: commands.rs  config.rs  gateway.rs  mod.rs  runtime.rs
trading/signer-app/src/components/: AccountMenu.tsx  ArmLadderDialog.tsx  CircuitBreakerBanner.tsx  Collapsible.tsx  EmergencyFlatten.tsx  ErrorBoundary.tsx  HlWizard.tsx  LadderEditor.tsx  LadderSpecEditor.tsx  ShellSection.tsx  SolanaWizard.tsx  StatusLine.tsx  form.tsx  statusItems.tsx  ui.tsx
trading/signer-app/src/features/account/: AccountSection.tsx  AppSection.tsx  SecuritySection.tsx  WalletsCard.tsx  account.css
trading/signer-app/src/features/activity/: ActivityFeed.tsx  activity.css  lifecycle.ts  useBotActivity.ts
trading/signer-app/src/features/bots/: ActivateDialog.tsx  BudgetDialog.tsx  ClientCard.tsx  CreateClientDialog.tsx  RunningNow.tsx  SessionList.tsx  SolExecutionSettings.tsx  StartSessionDialog.tsx  WalletAccordion.tsx  ipc.ts  meta.ts  running.ts  useFleet.ts
trading/signer-app/src/features/perps-bots/: ExecutorCard.tsx  SignFeed.tsx  SpotPerpTransferDialog.tsx  WalletStrategySlot.tsx  ipc.ts  meta.ts
trading/signer-app/src/features/perps-positions/: AccountStrip.tsx  data.ts  dialogs.tsx
trading/signer-app/src/features/perps-positions/chart/: PerpCandleChart.tsx  PerpChart.tsx  usePolledCandles.ts
trading/signer-app/src/features/perps-presets/: CallerSubEditor.tsx  CallersSection.tsx  HlCopyConfigEditor.tsx  HlCopyTradeSection.tsx  callerOverrides.ts  ipc.ts
trading/signer-app/src/features/positions/: ClientsStrip.tsx  data.ts  ipc.ts
trading/signer-app/src/features/positions/chart/: PositionChart.tsx  TokenChart.tsx  chartFormat.ts  usePolledCandles.ts
trading/signer-app/src/features/presets/: AssignmentEditor.tsx  CopyConfigEditor.tsx  CopyTradeSection.tsx  ExecutionEditor.tsx  RowWithEditor.tsx  ScannerPresetsSection.tsx  botConfig.ts  ipc.ts  ruleSummary.ts  useCopyTrade.ts
trading/signer-app/src/lib/: commands.ts  gateway.ts  prefs.ts
trading/signer-app/src/pages/: AccountTab.tsx  Bots.tsx  Onboarding.tsx  PerpsBots.tsx  PerpsBotsTab.tsx  PerpsLive.tsx  PerpsPositions.tsx  SolBotsTab.tsx  SolLive.tsx  SolPositions.tsx  Unlock.tsx
trading/signer-app/src/styles/: app.css  fonts.css  mode.ts  slice2.css  tailwind.css
trading/signer-core/: Cargo.toml
trading/signer-core/src/: ata_cache.rs  blockhash_cache.rs  bot_engine.rs  budget.rs  copy_stream.rs  fee_strategy.rs  intent_stream.rs  jupiter.rs  keystore.rs  lib.rs  local_daemon.rs  os_keychain.rs  paths.rs  program_allow.rs  register.rs  relay.rs  route.rs  rpc.rs  sell_stream.rs  signer.rs  simulator.rs  stream_auth.rs  update.rs  vault.rs  ws_stream.rs
trading/signer-core/src/dex/: ata.rs  compute_budget.rs  mod.rs  pumpfun.rs  pumpfun_amm.rs  raydium_amm_v4.rs  tip.rs
trading/signer-core/src/hl/: audit.rs  config.rs  daemon.rs  exec_state.rs  info.rs  keystore.rs  mod.rs  push.rs  runtime.rs  server.rs  signing.rs
trading/signer-core/tests/: live_dex_sim.rs
trading/signer-protocol/: package.json  tsconfig.json
trading/signer-protocol/src/: index.ts
